page fix white spacing

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1781,6 +1781,12 @@ ul.layout-navigation.layout-navigation--full-width.layout--large-screen-only.dro
 .path-taxonomy .feed-icons {
     display: none;
 }
+.layout__header-row {
+    overflow: hidden!important;
+}
+.layout--fixed-header {
+    overflow: hidden!important;
+}
 .path-taxonomy .lc-btn-box {display: none;}
 .path-taxonomy .lc-contact-box { display: none; }
 .path-taxonomy .lc-price-box { display: none; }
